--- a/wabag12.html
+++ b/wabag12.html
@@ -163,7 +163,7 @@ button {
 
 <!-- LEFT LOGO -->
 <div class="left-panel">
-    <img src="https://va1765857408671.file.force.com/sfc/dist/version/renditionDownload?rendition=ORIGINAL_Png&versionId=068Ka00000QmmJm&operationContext=DELIVERY">
+    <img src="https://va1765857408671.file.force.com/sfc/dist/version/renditionDownload?rendition=ORIGINAL_Png&versionId=068Ka00000QmmJm&operationContext=DELIVERY&contentId=05TKa00001ym055&page=0&d=/a/Ka000000y7bu/F.k346CmQvVURAwqV0ZRdVtkV.FSYCjjz.6GwPOZxbw&oid=00DKa00000YDA5y&dpt=null&viewId=">
 </div>
 
 <!-- FORM -->
